[package]
name = "seungjin"
version = "0.1.0"
author = "Seungjin Kim <seungjin@duck.com>"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seungjin/seungjin-crate"
homepage = "https://github.com/seungjin/seungjin-crate"
documentation = "" 
readme = "README.md"
description = """
seungjin's rust crate
"""
edition = "2024"

[dependencies]
